--- a/apps/local-ui/package.json
+++ b/apps/local-ui/package.json
@@ -10,9 +10,9 @@
     "@cgi-learning-hub/ui": "workspace:*"
   },
   "devDependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18"
+    "@types/react-dom": "18.2.18",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
