--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
       "vite": "5.0.12",
       "vite-plugin-dts": "3.7.1",
       "vite-tsconfig-paths": "4.3.1",
+      "glob": "10.3.10",
+      "vite-plugin-lib-inject-css": "1.3.0",
       "typescript": "5.3.3",
       "@types/react": "18.2.48",
       "@types/react-dom": "18.2.18",
