--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -33,10 +33,13 @@
         "build": "vite build",
         "build:watch": "vite build --watch"
     },
-    "dependencies": {
+    "devDependencies": {
         "@mui/material": "5.15.0",
         "@emotion/react": "11.11.1",
-        "@emotion/styled": "11.11.0"
+        "@emotion/styled": "11.11.0",
+        "autoprefixer": "10.4.17",
+        "postcss": "8.4.33",
+        "tailwindcss": "3.4.1"
     },
     "peerDependencies": {
         "@types/react": "18.2.48",
