chore: add packages ui theme

--- a/package.json
+++ b/package.json
@@ -1,35 +1,40 @@
 {
-    "name": "@cgi-learning-hub/monorepo",
-    "private": true,
-    "scripts": {
-      "start-app-local-ui": "cd apps/local-ui && pnpm run dev",
-      "build-ui-library": "cd packages/ui && pnpm run build",
-      "start-ui-library": "cd packages/ui && pnpm run dev",
-      "build-ui-library-watch": "cd packages/ui && pnpm run build:watch",
-      "clean": "rm -rf */**/node_modules && rm -rf node_modules && rm -f pnpm-lock.yaml && rm -rf */**/dist",
-      "build": "pnpm -r run build",
-      "publish": "pnpm publish -r --access public",
-      "storybook": "storybook dev -p 6006"
-    },
-    "devDependencies": {
-      "storybook": "7.6.10",
-      "@storybook/addon-a11y": "7.6.10",
-      "@storybook/types": "7.6.10",
-      "@storybook/addon-essentials": "7.6.10",
-      "@storybook/addon-interactions": "7.6.10",
-      "@storybook/addon-links": "7.6.10",
-      "@storybook/react": "7.6.10",
-      "@storybook/react-vite": "7.6.10",
-      "@vitejs/plugin-react": "4.2.1",
-      "vite": "5.0.12",
-      "vite-plugin-dts": "3.7.1",
-      "vite-tsconfig-paths": "4.3.1",
-      "glob": "10.3.10",
-      "vite-plugin-lib-inject-css": "1.3.0",
-      "typescript": "5.3.3",
-      "@types/react": "18.2.48",
-      "@types/react-dom": "18.2.18",
-      "react": "18.2.0",
-      "react-dom": "18.2.0"
-    }
+  "name": "@cgi-learning-hub/monorepo",
+  "private": true,
+  "scripts": {
+    "start-app-local-ui": "cd apps/local-ui && pnpm run dev",
+    "build-theme-library": "cd packages/theme && pnpm run build",
+    "build-ui-library": "cd packages/ui && pnpm run build",
+    "start-theme-library": "cd packages/theme && pnpm run build",
+    "start-ui-library": "cd packages/ui && pnpm run dev",
+    "build-theme-library-watch": "cd packages/theme && pnpm run build:watch",
+    "build-ui-library-watch": "cd packages/ui && pnpm run build:watch",
+    "clean": "rm -rf */**/node_modules && rm -rf node_modules && rm -f pnpm-lock.yaml && rm -rf */**/dist",
+    "build": "pnpm -r run build",
+    "publish": "pnpm publish -r --access public",
+    "storybook": "storybook dev -p 6006"
+  },
+  "devDependencies": {
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
+    "@storybook/addon-a11y": "7.6.10",
+    "@storybook/addon-essentials": "7.6.10",
+    "@storybook/addon-interactions": "7.6.10",
+    "@storybook/addon-links": "7.6.10",
+    "@storybook/react": "7.6.10",
+    "@storybook/react-vite": "7.6.10",
+    "@storybook/types": "7.6.10",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
+    "@vitejs/plugin-react": "4.2.1",
+    "glob": "10.3.10",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "storybook": "7.6.10",
+    "typescript": "5.3.3",
+    "vite": "5.0.12",
+    "vite-plugin-dts": "3.7.1",
+    "vite-plugin-lib-inject-css": "1.3.0",
+    "vite-tsconfig-paths": "4.3.1"
   }
+}
