chore: add instruction and CJS/ES jest
wip

--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -23,7 +23,7 @@
       "import": "./dist/index.js"
     }
   },
-  "module": "dist/index.js",
+  "module": "dist/index.es",
   "files": [
     "dist"
   ],
