--- a/apps/local-ui/package.json
+++ b/apps/local-ui/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@cgi-learning-hub/theme": "workspace:*",
     "@cgi-learning-hub/ui": "workspace:*",
+    "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
