--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "vite": "5.0.12",
     "vite-plugin-dts": "3.7.1",
     "vite-plugin-lib-inject-css": "1.3.0",
-    "vite-tsconfig-paths": "4.3.1"
+    "vite-tsconfig-paths": "4.3.1",
+    "autoprefixer": "10.4.17",
+    "postcss": "8.4.33",
+    "tailwindcss": "3.4.1"
   }
 }
