feat(ui): HUB-288 add Dropzone, FileList and FileListItem components, override IconButton, Tab and Tooltip styles using theme

--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@mui/material": "5.15.7",
+    "@mui/x-date-pickers": "^6.19.4",
     "@tailwindcss/line-clamp": "0.4.4",
     "autoprefixer": "10.4.17",
     "deepmerge": "4.3.1",
