--- a/apps/local-ui/package.json
+++ b/apps/local-ui/package.json
@@ -10,7 +10,9 @@
     "@cgi-learning-hub/theme": "workspace:*",
     "@cgi-learning-hub/ui": "workspace:*",
     "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "5.0.0-alpha.165",
     "@mui/material": "^5.15.7",
+    "@mui/x-date-pickers": "^6.19.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +21,7 @@
     "@types/react": "^18.2.50",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
+    "dayjs": "^1.11.10",
     "postcss": "^8.4.33",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
