--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -40,6 +40,7 @@
     "@mui/material": "5.15.7",
     "@mui/x-date-pickers": "6.19.4",
     "autoprefixer": "10.4.17",
+    "dayjs": "1.11.10",
     "postcss": "8.4.33",
     "react-dropzone": "14.2.3",
     "tailwindcss": "3.4.1"
