--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
     "storybook": "storybook dev -p 6006"
   },
   "devDependencies": {
-    "@emotion/react": "11.11.3",
-    "@emotion/styled": "11.11.0",
-    "@mui/material": "5.15.10",
     "@storybook/addon-a11y": "7.6.10",
     "@storybook/addon-essentials": "7.6.10",
     "@storybook/addon-interactions": "7.6.10",
@@ -41,5 +38,10 @@
     "autoprefixer": "10.4.17",
     "postcss": "8.4.33",
     "tailwindcss": "3.4.1"
+  },
+  "peerDependencies": {
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
+    "@mui/material": "5.15.10"
   }
 }
