--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -39,13 +39,14 @@
     "build:watch": "vite build --watch"
   },
   "devDependencies": {
-    "@mui/material": "5.15.7",
-    "@mui/x-date-pickers": "^6.19.4",
     "@tailwindcss/line-clamp": "0.4.4",
     "autoprefixer": "10.4.17",
     "deepmerge": "4.3.1",
     "postcss": "8.4.33",
     "postcss-cli": "^11.0.0",
     "tailwindcss": "3.4.1"
+  },
+  "peerDependencies": {
+    "@mui/x-date-pickers": "^6.19.4"
   }
 }
