--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -40,17 +40,17 @@
     "tailwindcss": "3.4.1"
   },
   "peerDependencies": {
-    "dayjs": "1.11.10",
-    "react-dropzone": "14.2.3",
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
     "@mui/icons-material": "5.15.10",
     "@mui/lab": "5.0.0-alpha.165",
+    "@mui/material": "5.15.10",
     "@mui/x-date-pickers": "6.19.4",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "dayjs": "1.11.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@emotion/react": "11.11.3",
-    "@emotion/styled": "11.11.0",
-    "@mui/material": "5.15.10"
+    "react-dropzone": "14.2.3"
   }
 }
