--- a/package.json
+++ b/package.json
@@ -16,27 +16,27 @@
     "storybook": "storybook dev -p 6006"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "7.6.10",
-    "@storybook/addon-essentials": "7.6.10",
-    "@storybook/addon-interactions": "7.6.10",
-    "@storybook/addon-links": "7.6.10",
-    "@storybook/react": "7.6.10",
-    "@storybook/react-vite": "7.6.10",
-    "@storybook/types": "7.6.10",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18",
+    "@storybook/addon-a11y": "8.0.10",
+    "@storybook/addon-essentials": "8.0.10",
+    "@storybook/addon-interactions": "8.0.10",
+    "@storybook/addon-links": "8.0.10",
+    "@storybook/react": "8.0.10",
+    "@storybook/react-vite": "8.0.10",
+    "@storybook/types": "8.0.10",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "4.2.1",
-    "glob": "10.3.10",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "storybook": "7.6.10",
-    "typescript": "5.3.3",
-    "vite": "5.0.12",
-    "vite-plugin-dts": "3.7.1",
-    "vite-plugin-lib-inject-css": "1.3.0",
-    "vite-tsconfig-paths": "4.3.1",
-    "autoprefixer": "10.4.17",
-    "postcss": "8.4.33",
-    "tailwindcss": "3.4.1"
+    "autoprefixer": "10.4.19",
+    "glob": "10.3.12",
+    "postcss": "8.4.38",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "storybook": "8.0.10",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.5",
+    "vite": "5.2.11",
+    "vite-plugin-dts": "3.9.1",
+    "vite-plugin-lib-inject-css": "2.0.1",
+    "vite-tsconfig-paths": "4.3.2"
   }
 }
