--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -40,16 +40,16 @@
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "0.4.4",
-    "autoprefixer": "10.4.17",
+    "autoprefixer": "10.4.19",
     "deepmerge": "4.3.1",
-    "postcss": "8.4.33",
+    "postcss": "8.4.38",
     "postcss-cli": "^11.0.0",
-    "tailwindcss": "3.4.1"
+    "tailwindcss": "3.4.3"
   },
   "peerDependencies": {
-    "@mui/x-date-pickers": "^6.19.4",
-    "@emotion/react": "11.11.3",
-    "@emotion/styled": "11.11.0",
-    "@mui/material": "5.15.10"
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
+    "@mui/x-date-pickers": "^6.19.4"
   }
 }
