--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "start-app-local-ui": "cd apps/local-ui && pnpm run dev",
     "build-theme-library": "cd packages/theme && pnpm run build",
     "build-ui-library": "cd packages/ui && pnpm run build",
+    "build-icons-library": "cd packages/icons && pnpm run build",
     "start-theme-library": "cd packages/theme && pnpm run build",
     "start-ui-library": "cd packages/ui && pnpm run dev",
     "build-theme-library-watch": "cd packages/theme && pnpm run build:watch",
     "build-ui-library-watch": "cd packages/ui && pnpm run build:watch",
+    "build-icons-library-watch": "cd packages/icons && pnpm run build:watch",
     "clean": "rm -rf */**/node_modules && rm -rf node_modules && rm -rf */**/dist",
     "build": "pnpm -r run build",
     "publish": "pnpm publish -r --access public",
