--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -48,6 +48,7 @@
     "@mui/x-date-pickers": "^6.19.4",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@reduxjs/toolkit": "^2.2.5",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
