--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cgi-learning-hub/theme",
-  "version": "0.0.1-dev",
+  "version": "1.0.0",
   "private": false,
   "author": "CGI Learning-hub Team",
   "description": "@cgi-learning-hub/theme is a theme implemented with tailwindcss",
