fix(storybook): prevent styled_default not a function error

--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "build-theme-library-watch": "cd packages/theme && pnpm run build:watch",
     "build-ui-library-watch": "cd packages/ui && pnpm run build:watch",
     "build-icons-library-watch": "cd packages/icons && pnpm run build:watch",
-    "clean": "rm -rf */**/node_modules && rm -rf node_modules && rm -rf */**/dist",
+    "clean": "rm -rf */**/node_modules && rm -rf node_modules pnpm-lock.yaml && rm -rf */**/dist",
     "build": "pnpm -r run build",
     "publish": "pnpm publish -r --access public",
     "publish:dev": "pnpm publish -r --access public --tag develop",
     "storybook": "storybook dev -p 6006"
   },
   "devDependencies": {
+    "@fontsource/material-icons": "5.0.18",
+    "@fontsource/roboto": "5.0.13",
+    "@mui/material": "5.15.20",
     "@storybook/addon-a11y": "8.0.10",
     "@storybook/addon-essentials": "8.0.10",
     "@storybook/addon-interactions": "8.0.10",
     "@storybook/addon-links": "8.0.10",
+    "@storybook/addon-themes": "8.0.10",
     "@storybook/react": "8.0.10",
     "@storybook/react-vite": "8.0.10",
     "@storybook/types": "8.0.10",
