--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -35,6 +35,7 @@
     "build:watch": "vite build --watch"
   },
   "peerDependencies": {
+    "@mui/material": "^5.16.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "react": "^18.2.0",
