--- a/package.json
+++ b/package.json
@@ -18,29 +18,29 @@
   "devDependencies": {
     "@fontsource/material-icons": "5.0.18",
     "@fontsource/roboto": "5.0.13",
-    "@mui/material": "5.15.20",
-    "@storybook/addon-a11y": "8.0.10",
-    "@storybook/addon-essentials": "8.0.10",
-    "@storybook/addon-interactions": "8.0.10",
-    "@storybook/addon-links": "8.0.10",
-    "@storybook/addon-themes": "8.0.10",
-    "@storybook/react": "8.0.10",
-    "@storybook/react-vite": "8.0.10",
-    "@storybook/types": "8.0.10",
-    "@types/react": "18.3.1",
+    "@mui/material": "^5.0.0",
+    "@storybook/addon-a11y": "8.2.4",
+    "@storybook/addon-essentials": "8.2.4",
+    "@storybook/addon-interactions": "8.2.4",
+    "@storybook/addon-links": "8.2.4",
+    "@storybook/addon-themes": "8.2.4",
+    "@storybook/react": "8.2.4",
+    "@storybook/react-vite": "8.2.4",
+    "@storybook/types": "8.2.4",
+    "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "@vitejs/plugin-react": "4.2.1",
+    "@vitejs/plugin-react": "4.3.1",
     "autoprefixer": "10.4.19",
-    "glob": "10.3.12",
-    "postcss": "8.4.38",
+    "glob": "11.0.0",
+    "postcss": "8.4.39",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "storybook": "8.0.10",
-    "tailwindcss": "3.4.3",
-    "typescript": "5.4.5",
-    "vite": "5.2.11",
+    "storybook": "8.2.4",
+    "tailwindcss": "3.4.6",
+    "typescript": "5.5.3",
+    "vite": "5.3.4",
     "vite-plugin-dts": "3.9.1",
-    "vite-plugin-lib-inject-css": "2.0.1",
+    "vite-plugin-lib-inject-css": "2.1.1",
     "vite-tsconfig-paths": "4.3.2"
   }
 }
