--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -34,11 +34,13 @@
     "build": "vite build",
     "build:watch": "vite build --watch"
   },
+  "devDependencies": {
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0"
+  },
   "peerDependencies": {
-    "@mui/material": "^5.16.0",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@mui/material": "^5.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
