--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -38,18 +38,18 @@
     "build": "vite build",
     "build:watch": "vite build --watch"
   },
+  "dependencies": {
+    "@mui/x-date-pickers": "^7.0.0",
+    "deepmerge": "4.3.1"
+  },
   "devDependencies": {
     "@tailwindcss/line-clamp": "0.4.4",
     "autoprefixer": "10.4.19",
-    "deepmerge": "4.3.1",
-    "postcss": "8.4.38",
-    "postcss-cli": "^11.0.0",
-    "tailwindcss": "3.4.3"
+    "postcss": "8.4.39",
+    "postcss-cli": "11.0.0",
+    "tailwindcss": "3.4.6"
   },
   "peerDependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.10",
-    "@mui/x-date-pickers": "^6.19.4"
+    "@mui/material": "^5.0.0"
   }
 }
