--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vite": "5.3.4",
     "vite-plugin-dts": "3.9.1",
     "vite-plugin-lib-inject-css": "2.1.1",
+    "vite-plugin-svgr": "4.2.0",
     "vite-tsconfig-paths": "4.3.2"
   }
 }
