--- a/apps/local-ui/package.json
+++ b/apps/local-ui/package.json
@@ -10,24 +10,24 @@
     "@cgi-learning-hub/icons": "workspace:*",
     "@cgi-learning-hub/theme": "workspace:*",
     "@cgi-learning-hub/ui": "workspace:*",
-    "@mui/icons-material": "5.16.3",
-    "@mui/lab": "5.0.0-alpha.172",
-    "@mui/material": "5.16.3",
-    "@mui/x-date-pickers": "7.10.0",
-    "dayjs": "1.11.11",
+    "@mui/icons-material": "6.0.2",
+    "@mui/lab": "6.0.0-beta.9",
+    "@mui/material": "6.0.2",
+    "@mui/x-date-pickers": "7.15.0",
+    "dayjs": "1.11.13",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
-    "@types/react": "18.3.3",
+    "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.19",
-    "postcss": "8.4.39",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.45",
     "postcss-cli": "11.0.0",
-    "tailwindcss": "3.4.6",
-    "typescript": "5.5.3",
-    "web-vitals": "4.2.1"
+    "tailwindcss": "3.4.10",
+    "typescript": "5.5.4",
+    "web-vitals": "4.2.3"
   }
 }
