--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -38,18 +38,18 @@
     "@emotion/react": "11.13.3",
     "@emotion/styled": "11.13.0",
     "@mui/icons-material": "6.0.2",
-    "@mui/lab": "5.0.0-alpha.172",
+    "@mui/lab": "6.0.0-beta.9",
     "@mui/x-date-pickers": "7.15.0",
-    "dayjs": "1.11.11",
+    "dayjs": "1.11.13",
     "react-dropzone": "14.2.3"
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "2.2.6",
-    "@types/react": "18.3.3",
+    "@reduxjs/toolkit": "2.2.7",
+    "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.19",
-    "postcss": "8.4.39",
-    "tailwindcss": "3.4.6"
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.45",
+    "tailwindcss": "3.4.10"
   },
   "peerDependencies": {
     "@mui/material": "^6",
