--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -46,10 +46,7 @@
   "devDependencies": {
     "@reduxjs/toolkit": "2.2.7",
     "@types/react": "18.3.5",
-    "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.20",
-    "postcss": "8.4.45",
-    "tailwindcss": "3.4.10"
+    "@types/react-dom": "18.3.0"
   },
   "peerDependencies": {
     "@mui/material": "^6",
