--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Install PNPM
-        run: npm install -g pnpm@8.15.7
+        run: npm install -g pnpm
       - name: Run install
         run: pnpm install
       - name: Run build
