--- a/apps/local-ui/package.json
+++ b/apps/local-ui/package.json
@@ -10,10 +10,12 @@
     "@cgi-learning-hub/icons": "workspace:*",
     "@cgi-learning-hub/theme": "workspace:*",
     "@cgi-learning-hub/ui": "workspace:*",
-    "@mui/icons-material": "6.0.2",
-    "@mui/lab": "6.0.0-beta.9",
-    "@mui/material": "6.0.2",
-    "@mui/x-date-pickers": "7.15.0",
+    "@emotion/react": "11.13.3",
+    "@emotion/styled": "11.13.0",
+    "@mui/icons-material": "6.1.6",
+    "@mui/lab": "6.0.0-beta.14",
+    "@mui/material": "6.1.6",
+    "@mui/x-date-pickers": "7.22.1",
     "dayjs": "1.11.13",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -21,13 +23,13 @@
   },
   "devDependencies": {
     "@types/node": "20.14.10",
-    "@types/react": "18.3.5",
-    "@types/react-dom": "18.3.0",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
     "autoprefixer": "10.4.20",
-    "postcss": "8.4.45",
+    "postcss": "8.4.47",
     "postcss-cli": "11.0.0",
-    "tailwindcss": "3.4.10",
-    "typescript": "5.5.4",
-    "web-vitals": "4.2.3"
+    "tailwindcss": "3.4.14",
+    "typescript": "5.6.3",
+    "web-vitals": "4.2.4"
   }
 }
