--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,20 +35,20 @@
     "build:watch": "vite build --watch"
   },
   "dependencies": {
-    "@emotion/react": "11.13.3",
-    "@emotion/styled": "11.13.0",
-    "@mui/icons-material": "6.0.2",
-    "@mui/lab": "6.0.0-beta.9",
-    "@mui/x-date-pickers": "7.15.0",
+    "@mui/icons-material": "6.1.6",
+    "@mui/lab": "6.0.0-beta.14",
+    "@mui/x-date-pickers": "7.22.1",
     "dayjs": "1.11.13",
-    "react-dropzone": "14.2.3"
+    "react-dropzone": "14.3.3"
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "2.2.7",
-    "@types/react": "18.3.5",
-    "@types/react-dom": "18.3.0"
+    "@reduxjs/toolkit": "2.3.0",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1"
   },
   "peerDependencies": {
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@mui/material": "^6",
     "react": "^18",
     "react-dom": "^18"
