--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -38,11 +38,11 @@
     "build:watch": "vite build --watch"
   },
   "dependencies": {
-    "@mui/x-date-pickers": "^7",
-    "deepmerge": "4.3.1"
+    "@mui/utils": "6.1.9",
+    "@mui/x-date-pickers": "7.22.3"
   },
   "devDependencies": {
-    "tailwindcss": "3.4.14"
+    "tailwindcss": "3.4.15"
   },
   "peerDependencies": {
     "@emotion/react": "^11",
