--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cgi-learning-hub/theme",
-  "version": "1.3.5",
+  "version": "1.3.5-dev",
   "private": false,
   "author": "CGI Learning-hub Team",
   "description": "@cgi-learning-hub/theme is a theme compatible with tailwind and mui",
