--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -35,14 +35,14 @@
     "build:watch": "vite build --watch"
   },
   "devDependencies": {
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1"
+    "@types/react": "19.0.3",
+    "@types/react-dom": "19.0.2"
   },
   "peerDependencies": {
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@mui/material": "^6",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18 || ^19",
+    "react-dom": "^18 || ^19"
   }
 }
