--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,22 +35,22 @@
     "build:watch": "vite build --watch"
   },
   "dependencies": {
-    "@mui/icons-material": "6.1.9",
-    "@mui/lab": "6.0.0-beta.17",
-    "@mui/x-date-pickers": "7.22.3",
+    "@mui/icons-material": "6.3.1",
+    "@mui/lab": "6.0.0-beta.22",
+    "@mui/x-date-pickers": "7.23.3",
     "dayjs": "1.11.13",
     "react-dropzone": "14.3.5"
   },
   "devDependencies": {
-    "@reduxjs/toolkit": "2.3.0",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1"
+    "@reduxjs/toolkit": "2.5.0",
+    "@types/react": "19.0.3",
+    "@types/react-dom": "19.0.2"
   },
   "peerDependencies": {
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@mui/material": "^6",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18 || ^19",
+    "react-dom": "^18 || ^19"
   }
 }
